# quick_variant_calling

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: data_structs.rs  main.rs
